--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "14.0.3",
     "next-themes": "^0.2.1",
     "react": "^18",
+    "react-collapsible": "^2.10.0",
     "react-dom": "^18"
   },
   "devDependencies": {
