--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
+    "@iconify/react": "^4.1.1",
     "next": "14.0.3",
     "next-themes": "^0.2.1",
     "react": "^18",
