--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-collapsible": "^2.10.0",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/node": "^20",
